tests/programs/invalid/multiple_variables_per_declaration.java
public class A {
  public A() {}
  public void m() {
    int x = 1, y = 2, z = 3;
  }
}